--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 #devtools
 spring.thymeleaf.prefix=classpath:/thymeleaf/
 spring.thymeleaf.cache=false
+spring.jpa.hibernate.ddl−auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/inpia_eshop
+?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=hovn0
+spring.jpa.database=mysql
